--- a/CodebridgeTest.BL/CodebridgeTest.BL.csproj
+++ b/CodebridgeTest.BL/CodebridgeTest.BL.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CodebridgeTest.Domain\CodebridgeTest.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
