--- a/CodebridgeTest.API/appsettings.json
+++ b/CodebridgeTest.API/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Info": {
+    "ApplicationName": "Dogshouseservice",
+    "ApplicationVersion": "1.0.1"
+  }
 }
