Added entity framework, entities, enstablished db connection, added initial migration

--- a/CodebridgeTest.API/appsettings.json
+++ b/CodebridgeTest.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-CECDKOC\\SQLEXPRESS;Database=YTerekhCodebridge;Trusted_Connection=True;TrustServerCertificate=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
