added rate limiting

--- a/CodebridgeTest.API/appsettings.json
+++ b/CodebridgeTest.API/appsettings.json
@@ -12,5 +12,22 @@
   "Info": {
     "ApplicationName": "Dogshouseservice",
     "ApplicationVersion": "1.0.1"
+  },
+  "IpRateLimiting": {
+    "EnableEndpointRateLimiting": false,
+    "StackBlockedRequests": false,
+    "RealIpHeader": "X-Real-IP",
+    "ClientIdHeader": "X-ClientId",
+    "HttpStatusCode": 429,
+    "IpWhitelist": [ ],
+    "EndpointWhitelist": [ ],
+    "ClientWhitelist": [ ],
+    "GeneralRules": [
+      {
+        "Endpoint": "*",
+        "Period": "5s",
+        "Limit": 1
+      },
+    ]
   }
 }
