--- a/CodebridgeTest.BL/CodebridgeTest.BL.csproj
+++ b/CodebridgeTest.BL/CodebridgeTest.BL.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AspNetCoreRateLimit" Version="5.0.0" />
     <PackageReference Include="AutoMapper" Version="12.0.1" />
     <PackageReference Include="FluentValidation" Version="11.7.1" />
     <PackageReference Include="MediatR" Version="11.1.0" />
